# lichtfeld-360-plugin

./: .gitignore  CHANGELOG.md  DIAGNOSTICS.md  LICENSE  README.md  __init__.py  conftest.py  plugin.py  pyproject.toml  test_phase1.py
core/: __init__.py  analyzer.py  backends.py  colmap_cleanup.py  colmap_runner.py  cubemap_projection.py  dual_fisheye_calibration_provider.py  fisheye_calibration.py  fisheye_circle_mask.py  fisheye_priors.py  fisheye_reframer.py  frame_source.py  gpu_extraction_install.py  image_folder_fisheye.py  input_detect.py  mask_diagnostics.py  masker.py  osv_handler.py  output_mode.py  overlap_mask.py  paired_extractor.py  pipeline.py  presets.py  pycolmap_guard.py  reframer.py  rig_config.py  sam3_compat.py  sam3_masker.py  scaffold.py  setup_checks.py  sharpest_extractor.py  transforms_writer.py
dev/: COLMAP_CANCEL_ANALYSIS.md  backprojection_harness.py  benchmark.py  build_sam2_c_extension.ps1  fix_workspace_acl.ps1  fix_workspace_acl_v2.ps1  preset_comparison.html  preset_diagnostics.py  test_masking.py
dev/future/: FULL_PRESET_ARCHIVE.md  README.md
docs/: 2026-04-03-fullcircle-plugin-inspection.md  2026-04-03-masking-v1-plan-v3-inspection-round2.md  2026-04-03-masking-v1-plan-v3-inspection.md  2026-04-03-masking-v1-plan-v4-inspection.md  2026-04-03-masking-v1-plan-v5-inspection.md  2026-04-03-masking-v1-plan-v6-inspection.md  2026-04-03-masking-v1-plan-v7-inspection.md  2026-04-03-masking-v1-plan-v8-final-inspection.md  2026-04-03-masking-v1-preflight-checklist.md  2026-04-03-sam3-video-api-research.md  2026-04-03-sam3-video-backend-adapter-shape.md  2026-04-04-360-plugin-github-publication-process-draft.md  2026-04-04-360-plugin-registry-submission-draft.md  2026-04-04-360-plugin-registry-submission-process-draft.md  2026-04-04-backprojection-sampling-artifact.md  2026-04-04-cubemap-quality-v1-file-by-file-plan.md  2026-04-04-cubemap-quality-v1-implementation-checklist.md  2026-04-04-cubemap-quality-v1-plan.md  2026-04-04-cubemap-test-review.md  2026-04-04-default-masking-regression-causality-report.md  2026-04-04-default-masking-stabilization-report-and-plan.md  2026-04-04-direction-estimation-regression.md  2026-04-04-known-good-masking-env-state.md  2026-04-04-lichtfeld-display-name-issue-draft.md  2026-04-04-lichtfeld-plugin-title-registry-system-report.md  2026-04-04-marketplace-name-and-env-regression-report.md  2026-04-04-masking-env-drift-report-and-recovery-plan.md  2026-04-04-masking-performance-quality-plan-response.md  2026-04-04-masking-performance-quality-plan.md  2026-04-04-masking-regression-investigation-plan-addendum.md  2026-04-04-masking-regression-investigation-plan.md  2026-04-04-masking-stabilization-handoff-report.md  2026-04-04-masking-testing-report-response.md  2026-04-04-masking-testing-report.md  2026-04-04-ownership-acl-root-cause-report.md  2026-04-04-performance-optimization-results-response.md  2026-04-04-performance-optimization-results.md  2026-04-04-pre-optimization-default-masking-reference.md  2026-04-04-preset-aware-masking-plan-response.md  2026-04-04-preset-aware-masking-plan-v2.md  (+23 more)
docs/specs/: 2026-04-02-masking-layer-v1-design.md  2026-04-02-masking-v1-plan.md  2026-04-03-masking-v1-plan-final.md  2026-04-03-masking-v1-plan-v3.md  2026-04-03-masking-v1-plan-v4.md  2026-04-03-masking-v1-plan-v5.md  2026-04-03-masking-v1-plan-v6.md  2026-04-03-masking-v1-plan-v7.md  2026-04-03-masking-v1-plan-v8.md  2026-04-03-masking-v1-updated-plan.md  2026-04-08-masking-setup-ux-implementation-plan.md  2026-04-08-masking-setup-ux-proposal.md  2026-04-08-sam3-cubemap-implementation-plan.md  2026-04-08-sam3-cubemap-masking-design.md
docs/superpowers/specs/: 2026-04-22-dual-fisheye-pipeline-design.md
lib/: _C.pyd  aliked-n16rot.onnx  bruteforce-matcher.onnx
panels/: __init__.py  prep360_panel.py  prep360_panel.rcss  prep360_panel.rml
tests/: conftest.py  test_analyzer.py  test_backends.py  test_colmap_compat.py  test_colmap_config.py  test_cubemap_diagnostic.py  test_cubemap_projection.py  test_fisheye_circle_mask.py  test_mask_diagnostics.py  test_mask_polarity.py  test_masker.py  test_masking_integration.py  test_overlap_mask.py  test_pipeline.py  test_presets.py  test_reframer.py  test_rig_config.py  test_sam3_compat.py  test_sam3_masker.py  test_setup_checks.py  test_sharpest_extractor.py  test_synthetic_camera.py  test_transforms_writer.py
