[project]
name = "lichtfeld-360-plugin"
version = "0.2.0"
description = "360 video to Gaussian Splat scene with automated masking and rig support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{name = "Alex Gee"}]
dependencies = [
    "huggingface-hub==1.9.0",
    # Must be a DIFFERENT version than the CUDA wheel in the gpu-opencv
    # extra (4.13.0.90): uv reconciles installed packages by version string
    # only, so an equal version would leave existing CUDA-wheel venvs
    # permanently unconverged on sync.
    "opencv-contrib-python==4.13.0.92",
    "numpy",
    "pycolmap",
    "static-ffmpeg",
    "sam2==1.1.0",
    "ultralytics>=8.4.33",
    "segment-anything>=1.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    # SAM 3 runtime lives in BASE deps deliberately: the LFS host runs a
    # bare `uv sync` on plugin load, which uninstalls anything only an
    # extra pulls in — as an extra, the runtime was pruned on every
    # launch. These packages are plain PyPI (ungated); the gated part of
    # SAM 3 is the model weights on HuggingFace (token + access + download
    # via the panel), which this does not change.
    "sam3>=0.1.3",
    "triton-windows==3.6.0.post25; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Legacy compatibility alias: FullCircle now ships ready in the base runtime.
video-tracking = []
# Legacy compatibility alias: the SAM 3 runtime moved into base
# dependencies (see note there) so the host's bare sync can't prune it.
sam3-masking = []
# Placeholder: opt-in GPU-accelerated frame extraction (CUDA OpenCV).
# The CUDA wheel (cudawarped opencv_contrib_python 4.13.0.90, win_amd64)
# cannot be expressed as an extra because it version-conflicts with the
# CPU baseline and uv conflicts() only arbitrates between extras, not
# extra-vs-base. The panel will install/manage it explicitly (Component B),
# including surviving bare `uv sync` runs. Never install it by default:
# it needs CUDA 13 runtime DLLs most machines lack (issues #6/#8).
gpu-opencv = []

[project.urls]
Repository = "https://github.com/alexmgee/lichtfeld-360-plugin"
Issues = "https://github.com/alexmgee/lichtfeld-360-plugin/issues"

[tool.uv]
exclude-dependencies = ["opencv-python", "opencv-python-headless"]

[tool.uv.sources]
pycolmap = [
  { url = "https://github.com/lyehe/build_gpu_colmap/releases/download/v4.1.0/pycolmap-4.1.0%2Bcuda.cudss-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.lichtfeld]
hot_reload = false
display_name = "360 Plugin"
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
